style: fix spacing for controls and main

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -64,8 +64,14 @@ header {
   color: #ff017b;
 }
 
+main {
+  padding-bottom: 20px;
+}
+
 #controls {
   display: flex;
+  justify-content: space-around;
+  padding: 0 20px;
 }
 
 p,
